Mon Apr 23 22:04:24 2001  George Lebl <jirka@5z.com>

	* configure.in, acconfig.h, daemon/auth.c, daemon/misc.[ch],
	  daemon/slave.c, daemon/verify.h,
	  daemon/verify-(pam|crypt|shadow).h:  Fixup enviroment issues.
	  Clear the environment before running a session and before launching
	  the greeter (taking care to save the localisation vars).  Also
	  don't set user env on the slave and leave it, if we set it it's
	  only temporary.  Also fix one possible crash by strduping the
	  pam env since that will go away and putenv doesn't strdup.

Mon Apr 23 20:16:07 2001  George Lebl <jirka@5z.com>

	* configure.in: when we find libwrap.a instead of specifying that
	  filename, use -lwrap which may be better on some systems

Mon Apr 23 20:08:19 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c:  if no LANG/LC_ALL is set, use the GdmDefaultLocale
	  setting as our locale.

Mon Apr 23 18:49:55 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c:  fix buffer overrun in making the enriched string

Sat Apr 21 11:46:02 2001  George Lebl <jirka@5z.com>

	* gui/icon-entry-hack.[ch]: update hack from panel

Thu Apr 19 17:32:36 2001  George Lebl <jirka@5z.com>

	* docs/C/gdm.sgml:  Update the VerboseAuth and AllowRoot sections
	  to reflect what actually happens nowdays.

Thu Apr 19 13:18:59 2001  George Lebl <jirka@5z.com>

	* daemon/verify-crypt.c, daemon/verify-shadow.c,
	  daemon/verify-pam.c:  Fix GdmAllowRoot (it only worked in verbose
	  mode), made the verbose mode selection useful without being
	  insecure, and in nonverbose mode you still get "Login incorrect"
	  message as those are safe.  In pam mode we now check for 
	  root as well.  We also now check for shell to be /bin/false as
	  a sign the user was disallowed from logging in.

Thu Apr 19 03:48:11 2001  George Lebl <jirka@5z.com>

	* daemon/slave.c: don't search for shells, that's wrong, if the
	  user doesn't have a shell set, we are supposed to use straight