@@ -1,3 +1,9 @@
+Mon Apr 23 22:34:24 2001  George Lebl <jirka@5z.com>
+
+	* gui/gdmlogin.c: always draw the focus correctly and hardset the
+	  gtk focus flag.  Hmm, I'm beginning not to like all this focus
+	  voodoo that gdmlogin does.
+
 Mon Apr 23 22:04:24 2001  George Lebl <jirka@5z.com>
 
 	* configure.in, acconfig.h, daemon/auth.c, daemon/misc.[ch],
